fix index.html 's responsive design. and included angular to detail page . prepare to use angular's router and template in detail.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div><!-- /.container -->
     </nav>
 
+		<div class="main-container">
     <div class="container-fluid section-1 text-center">
     	<div class="inner-container">
     		<div class="row">
@@ -49,7 +50,6 @@
     				<div class="text-container text-left">
     					<p>This portfolio is created on 06-12-2016. So I am still sorting my works. I will gradually complete this site these days.</p>
 			        <p>Most of these works are my personal practices, because most of my former works were management systems or some built-in activity pages which highly relied on the intranet, so I can't demonstrate them here.</p>
-			        <p>But I can provide some documents and codes about my former works if it's necessary.</p>
 			        <p>But I can provide some documents and codes about my former works if it's necessary.</p>
 			        <br>
 			        <p>I started to add some effets today(15-12). and it has influenced the responsive design. I will fix that after finish these sorts of works.</p>
@@ -131,7 +131,7 @@
               <h3>Reliance Management System</h3>
               <p>Date: 2014-12</p>
               <p>This is a real project, I made the whole frame of this management system. So I have the original version which is not rely on our intranet. Because it is not the final full funtions vertion, I can put it here. This frame is made by jQuery, but the inner model is rely on extjs 2.0, so I rewrited all the css of extjs to match the designs. The tab is drawable, and has interaction with the left menu, I will add all the documents as soon as possible.</p>
-              <p><a href="detail-reliance.html" class="btn btn-primary" role="button">More Info</a> <a href="works/reliance/mainframe.html" class="btn btn-default" role="button" target="_blank">Demo</a></p>
+              <p><a href="detail.html#/RELIANCE-MANAGEMENT" class="btn btn-primary" role="button">More Info</a> <a href="works/reliance/mainframe.html" class="btn btn-default" role="button" target="_blank">Demo</a></p>
             </div>
           </div>
         </div>
@@ -215,6 +215,8 @@
 
       </div><!-- /.row -->
     </div><!-- /.container -->
+    
+    </div>
 
 		<div class="top-arrow">
 			<a href="#theTop">
