--- a/detail.html
+++ b/detail.html
@@ -50,6 +50,12 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
     </nav>
+    
+    <div class="main-container">
+    	<div class="section-1">
+    		
+    	</div>
+    </div>
 
     <div class="container-fluid">
       <div class="page-header">
@@ -102,7 +108,7 @@
         <h3>Changing skin schemes<small></small></h3>
       </div>
 
-    </div>
+    </div> <!--/ main container-fluid-->
 
     <footer class="container-fluid bg-bottom text-center">
       <h2>I am the bottom of this page <a href="#theTop">Back to top</a></h2> 
@@ -111,5 +117,7 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/index.js"></script>
+    <script type="text/javascript" src="js/app.js" ></script>
+    <script type="text/javascript" src="js/controller.js" ></script>
   </body>
 </html>
