--- a/works/test_for_cucumber_Neal/src/zoom-version.html
+++ b/works/test_for_cucumber_Neal/src/zoom-version.html
@@ -7,7 +7,7 @@
     <title>Cucumber Test Neal</title>
 
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/zoom-version.css" />
 
     <!--[if lt IE 9]>
       <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -48,74 +48,49 @@
       		</div>
       		<div class="col-xs-offset-2 col-xs-10 col-sm-offset-0 col-sm-10">
       			<div class="row">
-      				<div class="col-xs-6 col-sm-3">
+      				<div class="col-xs-5 col-sm-4">
       					<img class="pics-current" src="images/01.jpg">
       				</div>
-      				<div class="col-xs-6 col-sm-9">
+      				<div class="col-xs-7 col-sm-8">
       					<div class="row">
       						<div class="pics-thumbnail">
       							<div class="col-xs-offset-1 col-xs-2 col-sm-offset-1 col-sm-1 spec-margin">
-      								<div class="pics-inner">
-      									<img src="images/02.jpg">
-      								</div>
+	      							<img src="images/02.jpg">
 	      						</div>
 	      						<div class="col-xs-2 col-sm-1">
-	      							<div class="pics-inner">
-	      								<img src="images/03.jpg">
-	      							</div>
+	      							<img src="images/03.jpg">
 	      						</div>
 	      						<div class="col-xs-2 col-sm-1">
-	      							<div class="pics-inner">
-	      								<img src="images/04.jpg">
-	      							</div>
+	      							<img src="images/04.jpg">
 	      						</div>
 	      						<div class="col-xs-2 col-sm-1">
-	      							<div class="pics-inner">
-	      								<img src="images/05.jpg">
-	      							</div>
+	      							<img src="images/05.jpg">
 	      						</div>
 	      						<div class="col-xs-2 col-sm-1">
-	      							<div class="pics-inner">
-	      								<img src="images/06.jpg">
-	      							</div>
+	      							<img src="images/06.jpg">
 	      						</div>
 	      						<div class="col-xs-offset-1 col-xs-2 col-sm-offset-0 col-sm-1 spec-margin">
-	      							<div class="pics-inner">
-	      								<img src="images/07.jpg">
-	      							</div>
+	      							<img src="images/07.jpg">
 	      						</div>
 	      						<div class="col-xs-2 col-sm-1">
-	      							<div class="pics-inner">
-	      								<img src="images/08.jpg">
-	      							</div>
+	      							<img src="images/08.jpg">
 	      						</div>
 	      						<div class="col-xs-2 col-sm-1">
-	      							<div class="pics-inner">
-	      								<img src="images/09.jpg">
-	      							</div>
+	      							<img src="images/09.jpg">
 	      						</div>
 	      						<div class="col-xs-2 col-sm-1">
-	      							<div class="pics-inner">
-	      								<img src="images/10.jpg">
-	      							</div>
-	      						</div><div class="col-xs-2 col-sm-1">
-	      							<div class="pics-inner">
-	      								<img src="images/10.jpg">
-	      							</div>
+	      							<img src="images/10.jpg">
 	      						</div>
       						</div>
       					</div>
       				</div>
       			</div>
       		</div>
-      	</div><!-- /.row -->
-      	<div class="row">
-      		<
       	</div>
-      </div><!-- /.container-fluid -->
+      </div>
       
       <footer class="container-fluid bg-bottom text-center">
-      	<h2>I am the bottom of this page <a href="#theTop">Back to top</a></h2> 
+      	<h2>I tried lots of methods to solve this vibration problem caused by the focused picture's width, didn't have enough time. keep it. will consider it again later.</h2> 
       </footer>
     </div><!-- /.main-container -->
 
