Used handlerbars in this page. transfered all the areas regarding data.js to handlerbars tempates. because of the files protocol, didn't use ajax finished the first step of click effect of picture area.

--- a/works/test_for_cucumber_Neal/src/quick-click-version.html
+++ b/works/test_for_cucumber_Neal/src/quick-click-version.html
@@ -7,7 +7,7 @@
     <title>Cucumber Test Neal</title>
 
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/quick-click-version.css" />
 
     <!--[if lt IE 9]>
       <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -168,6 +168,6 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
     <script src="js/data.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/index.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/quick-click-version.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
