--- a/works/test_for_cucumber_Neal/src/tpls/info-tpl.html
+++ b/works/test_for_cucumber_Neal/src/tpls/info-tpl.html
@@ -1,4 +1,4 @@
 <div class="col-xs-11">
-<h1 class="ctext-title">{{firstName}} {{lastName}}</h1>
-<p class="ctext-content">{{info}}</p>
+  <h1 class="ctext-title ctext-title-init">{{firstName}} {{lastName}}</h1>
+  <p class="ctext-content ctext-content-init">{{info}}</p>
 </div>
