Add nico and description document

--- a/works/test_for_cucumber_Neal/src/index.html
+++ b/works/test_for_cucumber_Neal/src/index.html
@@ -30,9 +30,9 @@
 
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#reliance">Application description</a></li>
-            <li><a href="##">Technical description</a></li>
-            <li><a href="##">About me</a></li>
+            <li><a href="manual.html">Application description</a></li>
+            <li><a href="description.html">Technical description</a></li>
+            <li><a href="http://kioo.cn/portfolio/">About me</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
