last part: left menu in Mobile screen. finished the documents finished all the needed work and have sent this version to the cucumber. Good luck, Neal!

--- a/works/test_for_cucumber_Neal/src/tpls/menu-tpl.html
+++ b/works/test_for_cucumber_Neal/src/tpls/menu-tpl.html
@@ -1,4 +1,5 @@
 <ul class="list-group menu-container">
+	<li class="list-group-item menu-top text-center"><span class="glyphicon glyphicon-chevron-right"></span></li>
   {{#each data}}
   <li class="list-group-item menu-item menu-id-{{id}}" data-id="{{id}}">{{firstName}} {{lastName}}</li>
   {{/each}}
